fix: correctly align scroll bar:

--- a/client/src/components/DnD/dragAndDrop.module.css
+++ b/client/src/components/DnD/dragAndDrop.module.css
@@ -3,8 +3,6 @@
     grid-template-columns: 190px 190px 190px;
     gap: 0.5rem;
     margin-bottom: 7.5rem;
-    margin-left: 0rem;
-    padding: 0.5rem;
     border-radius: 10px;
 
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -12,7 +10,8 @@
 }
 
 .scroll {
-    margin-top: 34.5px;
+    margin-top: 41.7px;
+    margin-right: 35px;
     width: 95%;
     overflow: scroll;
     overflow-x: hidden; /* Hide horizontal scrollbar */
