--- a/client/src/views/NotesView/NotesView.module.css
+++ b/client/src/views/NotesView/NotesView.module.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    margin-right: 20px;
     padding-top: 25px;
     height: 70px;
 }
@@ -17,6 +18,6 @@
 .main {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
     width: 100%;
 }
